<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround"
    android:padding="15dp"
    tools:context=".loginActivity.UI.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="328dp"
        android:layout_height="232dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoprinet"
        tools:srcCompat="@drawable/logoprinet" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditTextUserLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/User"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/colorAccent"
        app:counterTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLineaTV"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditTextUserPasword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/colorAccent"
        app:counterTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextUserLogin"
        tools:layout_editor_absoluteX="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="#F3F0F0"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/ButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorAccent"
        android:text="Iniciar Sesion"
        android:textColor="#FFFFFF"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/EditTextUserPasword" />

    <TextView
        android:id="@+id/textViewSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/Sing_UPfragment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ButtonLogin"
        app:layout_constraintStart_toStartOf="@+id/ButtonLogin" />

    <CheckBox
        android:id="@+id/checkBoxRememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Recordarme"
        android:textColor="@color/white"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/EditTextUserPasword"
        app:layout_constraintTop_toBottomOf="@+id/EditTextUserPasword" />

</androidx.constraintlayout.widget.ConstraintLayout>